@@ -1,3 +1,6 @@
+3 January 2018: Ralph
+	- Fix queries being leaked above stub when refetching glue.
+
 2 January 2017: Wouter
 	- Fix that DS queries with referral replies are answered straight
 	  away, without a repeat query picking the DS from cache.
